--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     implementation 'com.mikhaellopez:circularimageview:4.3.0'
     def lottieVersion = "5.2.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
+    implementation "com.tbuonomo:dotsindicator:4.3"
 }
